css/styles.css
header {
    position: sticky;
    top: 0;
    background-color: var(--white);
    z-index: 999;
}

.header-wrapper {
    display: flex;
    align-items: center;
    justify-content: space-between;
    padding: 1rem 0 !important;
    position: relative;
}

header .logo {
    font-size: 2rem;
}

header .logo span {
    font-size: 2rem;
    color: var(--main-color);
    font-weight: bold;
}

.contact {
    background-color: var(--main-color);
    color: var(--white);
    cursor: pointer;
    padding: 0.7rem 1.8rem;
    border-radius: 4px;
}

.menu-desktop ul {
    display: flex;
    list-style-type: none;
    list-style-position: outside;
}

.menu-desktop ul li {
    margin-right: 2rem;
}

.menu-mobile {
    display: none;
}

.menu-mobile span {
    cursor: pointer;
}

.menu-mobile-content {
    display: none;
    position: absolute;
    width: 100vw;
    height: 100vh;
    background-color: var(--white);
    left: 0;
    justify-content: center;
    align-items: center;
    margin-top: 1rem;
}

.menu-mobile-content ul {
    list-style-type: none;
    list-style-position: outside;
}

.menu-mobile-content ul li {
    margin-bottom: 4rem;
    text-align: center;
}

.menu-mobile-content ul li a {
    font-size: 2rem;
    font-weight: lighter;
    text-transform: uppercase;
}

.menu-mobile .mobile-button {
    background: none !important;
    color: var(--black-555);
    padding: 0;
}

.active {
    font-weight: 600;
    color: var(--main-color);
}

section.hero {
    display: flex;
    align-items: center;
    justify-content: space-between;
    min-height: 95vh;
}

.hero-content {
    width: 50%;
}

.hero-content p {
    margin-top: 2rem;
    color: var(--black-555);
}

.hero-content button {
    margin-top: 2rem;
}

.hero-content span { 
    font-size: 2.5rem;
}

.hero-content h1 span {
    color: var(--main-color);
}

.clients {
    display: flex;
    align-items: center;
    justify-content: space-between;
    background-color: var(--gray-800);
    padding: 0 1rem;
    border-radius: 4px;
}

.clients img {
    width: 9%;
}

.service-title {
    margin-top: 5rem;
}

.service-title p { 
    padding: 0 5rem;
    margin-top: 1rem;
    color: var(--black-555);
}

.services {
    display: flex;
    flex-direction: column;
    justify-content: center;
    text-align: center;
    align-items: center;
    min-height: 90vh;
}

.swiper {
    width: 100%;
    height: 400px;
    margin-top: 10rem;
    margin-bottom: 0 !important;
}  
.swiper-card {
    width: 300px;
    background-color: var(--gray-800);
    padding: 2rem 1rem;
    text-align: left;
    border-radius: 8px;
}

.swiper-card img {
    width: 50px;
    margin-bottom: 2rem;
}

.swiper-card span {
    font-weight: bold;
}

.swiper-card p {
    margin-top: 1rem;
    color: var(--black-555);
}

.swiper-pagination {
    margin-top: 5rem !important;
}

.about-us {
    display: flex;
    justify-content: center;
    align-items: center;
    min-height: 90vh;
}

.about-us img {
    width: 50%;
    height: 50%;
    border-radius: 4px;
}

.about-us .about-content {
    padding: 0 0 2rem 8rem;
}

.about-us .about-content p {
    color: var(--black-555);
    margin-top: 1rem;
}

.about-us .about-content button {
    margin-top: 4rem;
}

.metrics {
    width: 100%;
}

.metrics-wrapper {
    display: flex;
    justify-content: space-between;
    align-items: center;
    background-color: var(--main-color);
    padding: 2rem;
    border-radius: 4px;
}

.metric {
    display: flex;
    flex-direction: column;
    text-align: center;
}

.metric span, .metric p {
    color: var(--white) !important;
}

.metric span {
    font-size: 4rem;
    font-weight: bold;
}

.testimonial {
    display: flex;
    justify-content: center;
    flex-direction: column;
    min-height: 90vh
}

.testimonial > p {
    text-align: center;
    color: var(--black-555);
    margin-top: 1rem;
    padding: 0 5rem;
}

.testimonial h2 {
    text-align: center;
}

.testimonial-wrapper {
    display: flex;
    align-items: center;
    justify-content: space-between;
    gap: 20px;
}

.testimonial-card {
    width: 400px;
    padding: 2rem 1rem;
    text-align: left;
    border-radius: 8px;
    box-shadow: var(--shadow-elevation-medium);
} 

.testimonial-card .testimonial-profile {
    display: flex;
    align-items: center;
}

.testimonial-profile .testimonial-title {
    display: flex;
    flex-direction: column;
    margin-left: 0.5rem;
}

.testimonial-profile .testimonial-title span {
    color: var(--black-555);
}

.testimonial-stars {
    display: flex;
    margin-top: 1rem;
}

.testimonial-stars img {
    width: 25px !important;
    height: 25px !important;
} 

.testimonial-card p {
    margin-top: 1rem;
}

.testimonial-card img {
    width: 50px;
    height: 50px;
    object-fit: cover;
    border-radius: 50%;
}

.blog {
    display: flex;
    align-items: center;
    justify-content: center;
    flex-direction: column;
    min-height: 90vh;
}

.blog p {
    text-align: center;
    color: var(--black-555);
    margin-top: 1rem;
    padding: 0 5rem;
}

.blog h2 {
    text-align: center;
}

.blog .blog-posts {
    display: flex;
    flex-wrap: wrap;
    gap: 20px;
    align-items: center;
    justify-content: space-between;
    margin-top: 10rem;
    margin-bottom: 20px;
}

.blog .blog-posts .post {
    display: flex;
    flex-direction: column;
    width: 300px;
    box-shadow: var(--shadow-elevation-medium);
    padding: 1rem;
    border-radius: 4px;
}

.post img {
    height: 200px;
    object-fit: cover;
    border-radius: 8px;
}

.post .tag {
    background-color: #fae5d9;
    border-radius: 20px;
    width: 80px;
    text-align: center;
    margin-top: 1rem;
    padding: 0.1rem;
}

.post .tag small {
    color: #ff6f20;
    font-weight: bold;
    font-size: 0.8rem;
}

.blog-posts .post strong {
    margin-top: 1rem;
}

.blog-posts .post a {
    margin-top: 1rem;
    color: #ff6f20;
    font-weight: bold;
    font-size: 0.8rem;
}

footer {
    background-color: var(--black-222);
    padding: 5rem 2rem;
}

footer .logo {
    color: var(--white);
    font-size: 2rem;
}

footer .logo span {
    color: var(--main-color);
    font-size: 2rem;
    font-weight: bold;
}

.footer-wrapper {
    display: flex;
    align-items: stretch;
    justify-content: space-between;
}

.footer-section {
    display: flex;
    flex-direction: column;
}

.footer-section span {
    margin-top: 5px;
}

.footer-section .social-links {
    display: grid;
    grid-template-columns: 1fr 1fr 1fr;
    gap: 5px;
    column-gap: 20px;
    margin-top: 5px;
}
.footer-section .social-links a {
    transition: 0.5s ease all;
}
.footer-section .social-links a:hover {
    color: var(--main-color) !important;
}

.footer-section strong, .footer-section span, .footer-section a {
    color: var(--white) !important;
}

@media (max-width: 768px) { 
    header {
        padding: 0 2%;
    }
    
    header .header-wrapper {
        justify-content: space-between;
    }

    header .header-wrapper:before {
        content: '';
        display: block;
    }

    header .logo {
        margin-left: 3rem;
    }

    .menu-desktop {
        display: none;
    }

    .menu-mobile {
        display: flex;
        justify-content: flex-end;
        display: block;
    }

    header button {
        display: none;
    }

    .hero {
        flex-direction: column-reverse;
        justify-content: center;
        align-items: center;
        min-height: auto !important;
    }
    
    .hero-content {
        width: 100%;
        text-align: center;
        margin: 2rem 2rem;
    }

    .hero img {
        width: 500px !important;
        margin-top: 2rem;
    }

    .about-us {
        text-align: center;
        flex-direction: column;
        align-items: center;
        margin-bottom: 2rem;
        min-height: 90vh;
    }

    .about-us img {
        width: 500px;
        margin-bottom: 2rem;
        height: auto;
    }

    .about-us .about-content { 
        padding: 0;
    } 

    .metric span {
        font-size: 3rem;
    }

    .testimonial-wrapper {
        gap: 20px;
    }

    .blog .blog-posts {
        justify-content: center;
    }

    .clients img {
        width: 11%;
    } 
}

@media (max-width: 425px) { 

    .about-us {
        min-height: 80vh;
    }

    .metrics {
        min-height: 60vh;
    }

    .metrics-wrapper {
        flex-direction: column;
        justify-content: center;
    }
    
    .metric {
        margin-bottom: 2rem;
    }

    .testimonial-wrapper {
        flex-wrap: wrap;
        justify-content: center;
        align-items: center;
        margin-top: 5rem;
    }
 
    .blog {
        margin-top: 5rem;
    }

    .footer-wrapper {
        flex-direction: column;
    } 

    .footer-section {
        margin-top: 1rem;
    }

    .clients img {
        width: 15%;
    }
}

@media (max-height: 1000px) { 
    .swiper {
        margin-bottom: 10rem;
    }

    .testimonial-wrapper {
        margin-top: 5rem;
    }

    .blog {
        margin-bottom: 10rem;
    }
}

@media (max-width: 1440px) {
    .hero-content span {
        font-size: 2rem;
    }

    section.hero img {
        width: 600px;
    }

    .testimonial-wrapper {
        gap: 20px;
    }

    .testimonial {
        min-height: 100vh;
    }
}

